--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "px-to-nt": "bin/px-to-nt.js"
   },
   "scripts": {
-    "test": "standard && jest"
+    "test": "standard && mocha"
   },
   "repository": {
     "type": "git",
@@ -34,9 +34,9 @@
     "readable-stream": "^3.4.0"
   },
   "devDependencies": {
-    "jest": "^24.8.0",
+    "mocha": "^8.4.0",
     "node-fetch": "^2.6.0",
     "rdf-utils-fs": "^2.1.0",
-    "standard": "^12.0.1"
+    "standard": "^16.0.3"
   }
 }
